--- a/body.tex
+++ b/body.tex
@@ -16,4 +16,5 @@
 \begin{questionset}
     \qitem{tex/Theorem1.tex}{tex/Proof1.tex}
     \qitem{tex/Theorem2.tex}{tex/Proof2.tex}
+    \eitem{tex/Example1.tex}{tex/Answer1.tex}
  \end{questionset}
