--- a/main.theorems.tex
+++ b/main.theorems.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, oneside]{article}
 
 \usepackage{template/proof}
+\usepackage{template/example}
 
 \begin{document}
     \input{body.tex}
