--- a/template/template.sty
+++ b/template/template.sty
@@ -57,6 +57,8 @@
 
 \newcounter{x}
 \setcounter{x}{1}
+\newcounter{y}
+\setcounter{y}{1}
 
 \newenvironment{questionset}{
 	\begin{enumerate}[label={}, wide, labelindent=0pt]
